samples/by-property/invalid/toy5.bspl
../../tests/toy5.bspl